--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -127,7 +127,7 @@
                 android:background="@drawable/edittextesqredond"
                 android:fontFamily="@font/allproyectfont"
                 android:hint="@string/registerDireccion"
-                android:inputType="number"
+                android:inputType="textPostalAddress"
                 android:textAlignment="center"
                 android:textColor="@color/white"
                 android:textColorHint="#e3e1e1"
@@ -159,7 +159,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/registerDirrecion" />
 
             <Button
-                android:id="@+id/btRegistrarse"
+                android:id="@+id/btRegistrar"
                 android:layout_width="200dp"
                 android:layout_height="60dp"
                 android:layout_marginStart="95dp"
