--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -98,7 +98,7 @@
                 android:hint="@string/contrasenha"
                 android:inputType="textPassword"
                 android:textAlignment="center"
-                android:textColor="@color/black"
+                android:textColor="@color/white"
                 android:textColorHint="#e3e1e1"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -135,7 +135,7 @@
                 android:hint="@string/email"
                 android:inputType="textEmailAddress"
                 android:textAlignment="center"
-                android:textColor="@color/black"
+                android:textColor="@color/white"
                 android:textColorHint="#e3e1e1"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
