--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -31,13 +31,32 @@
             android:layout_width="387dp"
             android:layout_height="709dp">
 
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="132dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="132dp"
+                android:layout_marginBottom="16dp"
+                android:fontFamily="@font/allproyectfont"
+                android:text="@string/registro"
+                android:textAlignment="center"
+                android:textColor="@color/black"
+                android:textColorHint="#e3e1e1"
+                android:textSize="32sp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toTopOf="@+id/registerNombre"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <EditText
                 android:id="@+id/registerNombre"
                 android:layout_width="200dp"
                 android:layout_height="48dp"
                 android:layout_marginStart="95dp"
-                android:layout_marginTop="80dp"
+                android:layout_marginTop="16dp"
                 android:layout_marginEnd="95dp"
                 android:autofillHints="text"
                 android:background="@drawable/edittextesqredond"
@@ -51,7 +70,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
             <EditText
                 android:id="@+id/registerApelldio2"
