--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -47,25 +46,24 @@
                     android:src="@drawable/usuario" />
             </LinearLayout>
         </RelativeLayout>
-
     </androidx.appcompat.widget.Toolbar>
 
     <!-- TextView que muestra HOLA -->
     <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
+        android:id="@+id/tvSaludo"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/toolbar"
-        android:text="HOLA, "
+        android:text="!HOLA, ¡"
         android:textSize="42dp"
         android:textColor="#000000"
-        android:layout_marginTop="10dp"/>
+        android:layout_marginTop="10dp" />
 
-    <!-- ListView CATALGO-->
-    <ListView
-        android:id="@+id/listView"
+    <!-- RecyclerView para el catálogo -->
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/textView" />
-
+        android:layout_below="@id/tvSaludo"
+        android:padding="8dp" />
 </RelativeLayout>
