--- a/app/src/main/res/layout/item_producto.xml
+++ b/app/src/main/res/layout/item_producto.xml
@@ -2,17 +2,19 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:padding="8dp">
+    android:padding="8dp"
+    android:fitsSystemWindows="true"
+    >
 
     <ImageView
-        android:id="@+id/product_image"
+        android:id="@+id/productoImagen"
         android:layout_width="match_parent"
         android:layout_height="150dp"
         android:scaleType="centerCrop"
         android:src="@drawable/imagen_test" />
 
     <TextView
-        android:id="@+id/product_name"
+        android:id="@+id/productoNombre"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Nombre del producto"
@@ -21,10 +23,27 @@
         android:paddingTop="4dp"
         android:paddingBottom="2dp" />
 
-    <TextView
-        android:id="@+id/product_price"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="€ 0.00"
-        android:textSize="14sp" />
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/productoPrecio"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="€ 0.00"
+            android:textSize="14sp" />
+
+        <TextView
+            android:id="@+id/productoTalla"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Talla"
+            android:textSize="14sp"
+            android:paddingStart="8dp" />
+    </LinearLayout>
+
 </LinearLayout>
+
