--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="colorFondo">#FF0000</color>
+    <color name="colorFondo">#EB09184D</color>
     <color name="colorContenedor">#FFFFFF</color>
+
 </resources>
