--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,7 @@
             android:layout_height="match_parent">
 
             <ImageView
-                android:id="@+id/icon3"
+                android:id="@+id/iconFiltro"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
@@ -34,13 +34,13 @@
                 android:orientation="horizontal">
 
                 <ImageView
-                    android:id="@+id/icon1"
+                    android:id="@+id/iconCarrito"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:src="@drawable/carrito" />
 
                 <ImageView
-                    android:id="@+id/icon2"
+                    android:id="@+id/iconUsuario"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="12dp"
