--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -75,7 +75,7 @@
                     android:layout_marginTop="24dp"
                     android:layout_marginEnd="71dp"
                     android:layout_marginBottom="79dp"
-                    android:backgroundTint="#7B5BF2"
+                    android:backgroundTint="#EB09184D"
                     android:fontFamily="@font/allproyectfont"
                     android:text="@string/registrarse"
                     android:textAlignment="center"
@@ -95,7 +95,7 @@
                     android:layout_marginStart="71dp"
                     android:layout_marginTop="4dp"
                     android:layout_marginEnd="71dp"
-                    android:backgroundTint="#7B5BF2"
+                    android:backgroundTint="#EB09184D"
                     android:fontFamily="@font/allproyectfont"
                     android:text="@string/iniciar_sesion"
                     android:textAlignment="center"
