--- a/app/src/main/res/layout/activity_opciones.xml
+++ b/app/src/main/res/layout/activity_opciones.xml
@@ -131,7 +131,7 @@
             android:layout_marginStart="105dp"
             android:layout_marginTop="30dp"
             android:layout_marginEnd="106dp"
-            android:backgroundTint="#7B5BF2"
+            android:backgroundTint="#EB09184D"
             android:fontFamily="@font/allproyectfont"
             android:text="@string/cambiar"
             android:textAlignment="center"
