--- a/app/src/main/res/layout/dialog_filtros.xml
+++ b/app/src/main/res/layout/dialog_filtros.xml
@@ -44,12 +44,14 @@
             android:id="@+id/btnAplicarFiltros"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:backgroundTint="#EB09184D"
             android:text="Aplicar" />
 
         <Button
             android:id="@+id/btnQuitarFiltros"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:backgroundTint="#EB09184D"
             android:text="Quitar"
             android:layout_marginLeft="8dp" />
     </LinearLayout>
