--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -9,9 +9,9 @@
     android:fitsSystemWindows="true">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraintLogin"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/constraintLogin"
         android:background="@drawable/fondo"
         android:orientation="vertical"
         tools:context=".Login">
@@ -113,10 +113,13 @@
                     android:layout_marginStart="148dp"
                     android:layout_marginTop="12dp"
                     android:layout_marginEnd="86dp"
+                    android:checked="true"
                     android:fontFamily="@font/allproyectfont"
                     android:text="Recordar email"
                     android:textColor="@color/black"
                     android:textStyle="bold"
+                    android:theme="@style/checkBoxStyle"
+
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toStartOf="parent"
